<resources>
    <string name="app_name">Asg3</string>
    <string name="nameTv">MOAZ BIN MATEEN</string>
    <string name="rollno">BCSF18M020</string>
    <string name="learn">learn</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="button">HALQIYAH</string>
    <string name="lahatiyah">LAHATIYAH</string>
    <string name="shajariya">SHAJARIYA-HAFIYA</string>
    <string name="tarfiya">TARFIYAH</string>
    <string name="nit">NIT-EEYAH</string>
    <string name="lesaveyah">LESAVEYAH</string>
    <string name="ghunna">GHUNNA</string>
    <string name="opt1" />
    <string name="opt2" />
    <string name="opt3" />
    <string name="opt4" />
    <string name="ques" />
    <string name="submit">SUBMIT ANSWER</string>
    <string name="git">GIT LINK</string>
    <string name="textview"><![CDATA[There are 17 emission points (makhārij al-ḥurūf), located in various regions of: 1 – Throat 2 – Tongue 3 – Lips 4 – Nose 5 – Mouth]]></string>
    <string name="next">Next</string>
    <string name="anstv" />
    <string name="rslt">RESULTS</string>
    <string name="total">Total Questions</string>
    <string name="correct">Correct Answers</string>
    <string name="wrong">Wrong Answers</string>
    <string name="mark">Marks</string>
    <string name="perc">Percentage</string>
    <string name="rsltbtn">SHARE RESULTS</string>
    <string name="tq" />
    <string name="ca" />
    <string name="wa" />
    <string name="m" />
    <string name="p" />
</resources>