<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button7"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:text="@string/button"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:text="@string/lahatiyah"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:text="@string/shajariya"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/tarfiya"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:text="@string/nit"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:text="@string/lesaveyah"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="140dp"
        android:text="@string/ghunna"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>