<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".quiz">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="383dp"
        android:layout_height="381dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@color/maroon"
            android:textColor="@color/white"
            android:text="@string/opt1" />

        <RadioButton
            android:id="@+id/opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@color/maroon"
            android:textColor="@color/white"
            android:text="@string/opt2" />

        <RadioButton
            android:id="@+id/opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@color/maroon"
            android:textColor="@color/white"
            android:text="@string/opt3" />


        <RadioButton
            android:id="@+id/opt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@color/maroon"
            android:textColor="@color/white"
            android:text="@string/opt4" />
    </RadioGroup>

    <TextView
        android:id="@+id/ques"
        android:layout_width="386dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="13dp"
        android:text="@string/ques"
        android:textColor="@color/white"
        android:background="@color/maroon"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="48dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>