<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:text="@string/nameTv"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/rollno"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/rollno"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/nameTv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="345dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/makharij" />

    <Button
        android:id="@+id/learnBtn"
        android:layout_width="177dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/learn"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/quizBtn"
        android:layout_width="191dp"
        android:layout_height="66dp"
        android:layout_marginEnd="28dp"
        android:text="@string/take_quiz"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>